# OneEmployeeOrg

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CODEOWNERS  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup-hooks.sh
agents/: roster.yaml
agents/L1/: ar-agent.md  chief-of-staff.md
agents/L2/: finance-coordinator.md  inventory-coordinator.md  operations-coordinator.md
data/badges/: effort.yaml
docs/: decisions.md  technical-notes.md  usage.md
docs/superpowers/plans/: 2025-03-15-docker-implementation.md  2025-03-15-mvp-implementation.md  2026-03-15-api-questruntime.md  2026-03-15-gamification-refactor.md
docs/superpowers/specs/: 2026-03-15-api-questruntime-design.md
src/oneorg/: __init__.py  cli.py  config.py
src/oneorg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oneorg/api/: dependencies.py  main.py
src/oneorg/db/: __init__.py  database.py  init_db.py  models.py
src/oneorg/index/: parser.py  (+2 more)
tests/: test_api.py  test_auth.py  test_cli.py  test_config.py  test_db.py  test_models.py  test_quests.py
tests/test_api/: test_quest_flow.py
tests/test_gamification/: test_effort_badges.py  test_leaderboard.py
tests/test_gates/: test_evaluator.py  test_thresholds.py
tests/test_index/: test_builder.py  test_parser.py  test_search.py
tests/test_models/: test_age_mode.py  test_agent.py  test_calendar.py  test_gamification.py  test_student.py  test_xp_system.py
tests/test_state/: test_tracker.py
(+27 files in other folders)
